--- a/config/database.yml
+++ b/config/database.yml
@@ -3,11 +3,16 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
+
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  hostname: imac.local
+  port: 5432
+  adapter: postgres
+  encoding: unicode
+  database: histrollers
   pool: 5
-  timeout: 5000
+  username: histrollers
+  password: histrollers
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
