--- a/config/database.yml
+++ b/config/database.yml
@@ -5,9 +5,10 @@
 #   gem 'sqlite3'
 
 development:
-  hostname: imac.local
+  hostname: localhost
+  host: localhost
   port: 5432
-  adapter: postgres
+  adapter: postgresql
   encoding: unicode
   database: histrollers
   pool: 5
