--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ capybara-*.html
 /tmp/*
 /db/*.sqlite3
 /public/system/*
+/public/assets/*
 /coverage/
 /spec/tmp/*
 **.orig
@@ -30,3 +31,4 @@ pickle-email-*.html
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
