--- a/config/database.yml
+++ b/config/database.yml
@@ -10,9 +10,9 @@ development:
   port: 5432
   adapter: postgresql
   encoding: unicode
-  database: valydation
+  database: jesselanum
   pool: 5
-  username: valydation
+  username: jesselanum
   password: 4544jsnl
 
 # Warning: The database defined as "test" will be erased and
